# unity-cli-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  update-unity-cli.yml
data/: command-tree.json  source-manifest.json
references/: command-analytics.md  command-auth.md  command-bug.md  command-build.md  command-cache.md  command-changelog.md  command-cloud.md  command-command.md  command-completion.md  command-config.md  command-diagnose.md  command-doctor.md  command-editor.md  command-editors.md  command-env.md  command-help.md  command-hub.md  command-index.md  command-install-modules.md  command-install-path.md  command-install.md  command-language.md  command-license.md  command-list.md  command-logs.md  command-mcp.md  command-modules.md  command-open.md  command-pipeline.md  command-projects.md  command-releases.md  command-run.md  command-self-uninstall.md  command-shell.md  command-status.md  command-templates.md  command-test.md  command-uninstall.md  command-upgrade.md  overview.md
scripts/: __init__.py  collect_help.py  merge_platforms.py  parse_help.py  skills_ref_cli.py  update_skill.py  validate_generated.py
skills/unity-cli/: SKILL.md
skills/unity-cli/data/: command-tree.schema.json  (+1 more)
snapshots/windows/: help.json
tests/: conftest.py  test_collector.py  test_generator.py  test_merge_platforms.py  test_parser.py  test_semantic_diff.py  test_validation.py  test_workflow.py
tests/fixtures/: editors-help.txt  install-help.txt  top-help.txt
tests/golden/: command-index.md
(+33 files in other folders)
