[project]
name = "unity-cli-skill"
version = "0.1.0"
description = "Deterministic maintenance tools for the unity-cli Agent Skill"
requires-python = ">=3.12"
dependencies = [
  "jsonschema>=4.23,<5",
  "pyyaml>=6.0.2,<7",
]

[project.scripts]
skills-ref = "scripts.skills_ref_cli:main"

[dependency-groups]
dev = [
  "mypy>=1.15,<3",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.11,<0.12",
  "skills-ref>=0.1.1,<0.2",
  "types-jsonschema>=4.23,<5",
  "types-pyyaml>=6.0.12,<7",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["scripts", "tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
